--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@tanstack/react-query": "^5.90.2",
@@ -33,7 +34,9 @@
     "expo-status-bar": "~1.12.1",
     "expo-symbols": "~0.1.0",
     "expo-system-ui": "~3.0.7",
+    "expo-updates": "~0.25.28",
     "expo-web-browser": "~13.0.3",
+    "lucide-react-native": "^0.545.0",
     "nativewind": "^4.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -42,11 +45,10 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.14.0",
+    "react-native-svg": "15.2.0",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "13.8.6",
-    "react-native-worklets": "^0.6.1"
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -58,5 +60,9 @@
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
-  "private": true
+  "private": true,
+  "optionalDependencies": {
+    "lightningcss-linux-arm64-gnu": "1.27.0",
+    "lightningcss-linux-x64-gnu": "1.27.0"
+  }
 }
