--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "O3D",
+    "name": "Ổ 3D",
     "slug": "o3d",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -19,7 +19,10 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.nampg.o3d"
+      "bundleIdentifier": "com.nampg.o3d",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -27,7 +30,11 @@
         "backgroundColor": "#ffffff"
       },
       "package": "com.nampg.o3d",
-      "jsEngine": "jsc"
+      "jsEngine": "jsc",
+      "permissions": [
+        "NOTIFICATIONS",
+        "RECEIVE_BOOT_COMPLETED"
+      ]
     },
     "web": {
       "bundler": "metro",
@@ -35,7 +42,15 @@
       "favicon": "./assets/images/icon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/images/icon.png",
+          "color": "#ff4757",
+          "sounds": []
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
