--- a/eas.json
+++ b/eas.json
@@ -7,7 +7,16 @@
     "development": {
       "developmentClient": true,
       "distribution": "internal",
-      "channel": "development"
+      "channel": "development",
+      "android": {
+        "buildType": "apk",
+        "gradleCommand": ":app:assembleRelease"
+      },
+      "env": {
+        "EXPO_PUBLIC_API_URL": "https://node-j167.onrender.com/api",
+        "NODE_OPTIONS": "--max-old-space-size=4096",
+        "EXPO_NO_CAPABILITY_SYNC": "1"
+      }
     },
     "preview": {
       "distribution": "internal",
@@ -19,7 +28,7 @@
         "gradleCommand": ":app:assembleRelease"
       },
       "env": {
-        "EXPO_PUBLIC_API_URL": "https://hh3d.id.vn/api",
+        "EXPO_PUBLIC_API_URL": "https://node-j167.onrender.com/api",
         "NODE_OPTIONS": "--max-old-space-size=4096",
         "EXPO_NO_CAPABILITY_SYNC": "1",
         "npm_config_optional": "true"
@@ -34,7 +43,7 @@
         "gradleCommand": ":app:assembleRelease"
       },
       "env": {
-        "EXPO_PUBLIC_API_URL": "https://hh3d.id.vn/api",
+        "EXPO_PUBLIC_API_URL": "https://node-j167.onrender.com/api",
         "NODE_OPTIONS": "--max-old-space-size=4096",
         "EXPO_NO_CAPABILITY_SYNC": "1"
       }
