--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
     "@react-navigation/native": "^6.1.17",
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
+    "date-fns": "^4.1.0",
     "expo": "~51.0.28",
     "expo-blur": "~13.0.2",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.29",
+    "expo-device": "~6.0.2",
     "expo-font": "~12.0.9",
     "expo-haptics": "~13.0.1",
     "expo-image": "~1.13.0",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
+    "expo-notifications": "~0.28.19",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
@@ -48,7 +52,8 @@
     "react-native-svg": "15.2.0",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "13.8.6"
+    "react-native-webview": "13.8.6",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
