--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "o3d",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/favicon.png",
     "scheme": "o3d",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": false,
@@ -12,25 +12,27 @@
     "splash": {
       "image": "./assets/images/icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#ffffff",
+      "dark": {
+        "backgroundColor": "#181b24"
+      }
     },
     "updates": {
       "url": "https://u.expo.dev/c784b96c-0e74-4fac-9c84-e9654fe1cf2a"
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.nampg.o3d",
-      "infoPlist": {
-        "ITSAppUsesNonExemptEncryption": false
-      }
+      "bundleIdentifier": "com.nampg.o3d"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#ffffff",
+        "dark": {
+          "backgroundColor": "#181b24"
+        }
       },
       "package": "com.nampg.o3d",
-      "jsEngine": "jsc",
       "permissions": [
         "NOTIFICATIONS",
         "RECEIVE_BOOT_COMPLETED"
